2008-04-09  Reinhold Kainhofer  <reinhold@kainhofer.com>  (tiny change)

	* makeinfo/insertion.c (begin_insertion): do not indent via
	whitespace for html, since we already do <blockquote>.
	Reported 30 Mar 2008 00:56:56.

2008-04-02  Jim Meyering  <jim@meyering.net>  (tiny change)

	* doc/texinfo.tex: fix typos in comments.

2008-03-31  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\dopdfimage): try .PDF too.
	(\imagexxx): reduce space around vmode image to \medskip from \bigskip.
	Start \noindent paragraph for vmode image so that @quotation etc.
	indentation will be respected.
	Report from Reinhold Kainhofer, 28 Mar 2008 17:33:05.

2008-03-28  Karl Berry  <karl@gnu.org>

	* info/Makefile.am (funs.h): change target from all of
	$(generated_sources) to avoid problems with parallel builds.
	From Michael Haubenwallner, 20 Mar 2008 22:52:20.

2008-03-26  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (search_forward): use const.
	Also (from William Xu) fix typo in comment.
	* makeinfo/makeinfo.h (search_forward): change decl.

2008-03-25  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (TEX): only unset it if it was nonempty and a
	directory.

2008-03-25  Akim Demaille  <akim@epita.fr>

	* doc/Makefile.am: Use util_srcdir (new var) where appropriate.
	(man_MANS): Also install texi2pdf.1 and pdftexi2dvi.1.
	(unset_envvars): New.
	Use it.
	* util/local.test: Check we don't use $().
	Simplify sed usage: don't use \| which is not portable enough.
	* util/Makefile.am: Re-enable tests, in maintainer mode.

2008-03-23  Benno Schulenberg  <bensberg@justemail.net>  (tiny change)

	* info/session.c (_scroll_backward): better cursor placement.

2008-03-23  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (TEX): unset if it refers to a directory; I think
	the University of Utah installation does this.

2008-03-22  Karl Berry  <karl@gnu.org>

	* info/session.c (info_move_to_xref): conditionalize "no xref"
	message on cursor_movement_scrolls_p.  Proposed by